# lematerial-fetcher

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  ACKNOWLEDGEMENTS.md  Dockerfile  README.md  lemat-traj.sh  pyproject.toml  run-pipeline.sh  run.sh
catalysis_hub_surfaces/: formatting.py
docs/source/: conf.py
src/lematerial_fetcher/: cli.py  fetch.py  push.py  transform.py
src/lematerial_fetcher/database/: mysql.py  postgres.py
src/lematerial_fetcher/fetcher/alexandria/: fetch.py  transform.py  utils.py
src/lematerial_fetcher/fetcher/catalysis_hub/: fetch.py  utils.py
src/lematerial_fetcher/fetcher/mp/: fetch.py  transform.py  utils.py
src/lematerial_fetcher/fetcher/oc20/: fetch.py  transform.py  utils.py
src/lematerial_fetcher/fetcher/oqmd/: fetch.py  transform.py  utils.py
src/lematerial_fetcher/model/: mp_models.py
src/lematerial_fetcher/models/: optimade.py  trajectories.py
src/lematerial_fetcher/models/utils/: correction.py  enums.py  potcar.json
src/lematerial_fetcher/utils/: aws.py  cli.py  config.py  io.py  logging.py  structure.py
src/material_fetcher/: cli.py  fetch.py  transform.py
src/material_fetcher/database/: postgres.py
src/material_fetcher/model/: models.py  mp_models.py  optimade.py
src/material_fetcher/transform/: transform.py
src/material_fetcher/utils/: aws.py  config.py  logging.py
tests/: test_cli.py
tests/fetcher/: test_mp.py
tests/fetcher/mp/: test_mp_fetch.py
tests/models/: test_optimade_model.py
tests/transform/: test_versioning.py
tests/utils/: test_aws.py  test_config.py
(+5 files in other folders)
