# Copyright 2025 Entalpic
[project]
name = "material-fetcher"
version = "0.1.0"
description = "Data fetching and processing for LeMaterial datasets"
readme = "README.md"
authors = []
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.1.2",
    "tqdm>=4.67.1",
    "rich>=13.9.4",
    "cyclopts>=2.9.9",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "boto3>=1.36.20",
    "click>=8.1.8",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "pymatgen>=2025.1.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipython>=8.29.0",
    "ipdb>=0.13.13",
    "ruff>=0.7.1",
    "pytest>=8.3",
    "shibuya>=2024.10.15",
    "sphinx-autoapi>=3.3.2",
    "sphinx-autodoc-typehints>=2.5.0",
    "sphinx-code-include>=1.4.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-math-dollar>=1.2.1",
    "sphinxawesome-theme>=5.3.2",
    "pre-commit>=4.0.1",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "requests>=2.32.3",
    "botocore>=1.36.20",
]


[tool.ruff.lint]
extend-select = ["I"]
